src/styles/_images.scss
img {
  max-width: 100%; //needed for svg/gif images
}

.image-grid img {
  width: 100%;
  height: 100%;
  margin-bottom: $spacing-07;
}

// src ends with "svg"
img[src$='svg'] {
  width: 100%; // svgs can scale, so we're cool with stretching them
}

// images
.bx--row img {
  width: 100%;
  display: block;
}

.gallery-row-padding {
  margin-top: 0;
  @include carbon--breakpoint('md') {
    margin-top: rem(32px);
  }
}

.gallery-row-padding div {
  margin-top: rem(24px);
  @include carbon--breakpoint('md') {
    margin-top: 0;
  }
}

div[aria-label='animation'] {
  // needed for lottie animation files
  line-height: 0;
}

// Custom class provided to the GifPlayer component which allows for videos
.video-player div[role='button'] {
  //removes video button
  display: none;
}

.video-player > div:first-of-type > div:first-of-type {
  // fixes video jumping inside gif players
  display: flex;
  align-items: flex-start;
}

